1999-10-13  Alexander V. Lukyanov  <lav@yars.free.net>

	* ResMgr.cc: pass canonic resource name to Reconfig.

1999-10-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc, CmdExec.cc: call Reconfig after session change;
	  (do_cd) exit_code=0 if check is not needed.

1999-10-11  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: check file info for validity.
	* HttpDir.cc: don't dump core on eol==0.

1999-10-10  Alexander V. Lukyanov  <lav@yars.free.net>

	* GetJob.cc: don't open local file early if !cont.

1999-10-09  Alexander V. Lukyanov  <lav@yars.free.net>

	* misc.cc: call mkdir(...,0777) to let user choose umask.
	* ftpclass.cc: prepare for better handling of unsupported SIZE/MDTM.

1999-10-08  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, ftpclass.cc: low level ascii-mode
	  support.

1999-10-07  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: don't free peer, it is freed in parent class, and so
	  don't free proxy* (the later was harmless since proxy was set to 0).
	* Http.cc: use ClearPeer.
	* CmdExec.cc: actually assign c.
	* HttpDir.cc: better handle symlinks.

1999-10-05  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: handle Netscape-proxy listing; handle parse errors
	  better.
	* lftp.cc: use SOCKS4 define.
	* CmdExec.cc: use URL closure on several settings.

1999-10-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* ArgV.cc: (delarg) decrement ind if needed.
	* HttpDir.h, HttpDir.cc: (LsOptions) new class, use it, implement
	  -F ls option, accept -alC but ignore them for now.

1999-10-02  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc: fix type mismatch on 64-bit machines.
	* Makefile.am: don't depend on rlstdc.h

1999-10-01  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolver.cc: cast ResValue to (const char *) to avoid ambiguity.

1999-09-30  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: remove _() from "%s: %s\n".
